# chatmatch

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  spec.md
.github/workflows/: main.yml
templates/: admin.html  base.html  calendar.html  index.html  site.webmanifest
