[project]
name = "chatmatch"
version = "0.1.0"
description = "App to match discussion participants to topics and timeslots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.2",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
]
